--- a/vis.js/Network _ Manipulation.html
+++ b/vis.js/Network _ Manipulation.html
@@ -9,9 +9,11 @@
       font: 10pt sans;
     }
     #mynetwork {
+      float: left;
       position:relative;
       width: 800px;
       height: 600px;
+      margin: 5px;
       border: 1px solid lightgray;
     }
     table.legend_table {
@@ -109,10 +111,11 @@
       var container = document.getElementById('mynetwork');
       var options = {
         edges: {
-          smooth: {
+          /*smooth: {
             'type': 'cubicBezier',
             'forceDirection':'none'
-          },
+          },*/
+          smooth: false,
           physics: false,
           arrows: {to : true }
         },
@@ -184,13 +187,13 @@
 
       beaker = {
         'ws': {
-          dockerImg: 'foo:bingsearch'
+          dockerImage: 'foo:bingsearch'
         },
         'lda': {
-          dockerImg: 'foo:lda'
+          dockerImage: 'foo:lda'
         },
         'lda2vec': {
-          dockerImg: 'foo:lda2vec'
+          dockerImage: 'foo:lda2vec'
         },
         'es': {
           dockerImage: 'foo:elastic'
@@ -199,6 +202,10 @@
           datasetId: 'DS12345'
         }
       };
+
+      Object.keys(beaker).forEach(function(k) {
+        beaker[k]['resultPath'] = '/results';
+      });
 
       nodes.forEach(function(node) {
         beaker[node.id]['label'] = node.label;
@@ -228,17 +235,23 @@
 
       beaker[data.id] = {
         'label': data.label,
-        'dockerImg': document.getElementById('node-dockerImg').value,
+        'dockerImage': document.getElementById('node-dockerImage').value,
         'resultPath': document.getElementById('node-resultPath').value
       };
 
       clearPopUp();
       callback(data);
+      exportNetwork();
     }
 
     function fillExistingNode(data) {
       for (var attrname in beaker[data.id]) {
-        document.getElementById('node-' + attrname).value = beaker[data.id][attrname];
+        var nodeval = document.getElementById('node-' + attrname);
+        if (nodeval !== null) {
+          nodeval.value = beaker[data.id][attrname];
+        } else {
+          console.log('Skipping attribute ' + attrname)
+        }
       }
     }
 
@@ -272,6 +285,7 @@
       data.label = document.getElementById('edge-label').value || "";
       clearEdgePopUp();
       callback(data);
+      exportNetwork();
     }
 
     function addConnections(elem, index) {
@@ -327,6 +341,26 @@
     function init() {
       exportArea = document.getElementById('input_output');
       draw(5);
+      exportNetwork();
+
+      var nodeLabels = ['node-label', 'node-dockerImage', 'node-resultPath'];
+      nodeLabels.forEach(function(lbl) {
+        document.getElementById(lbl).addEventListener(
+          "keydown",
+          function(event) {
+            if (event.keyCode == 13) {
+                document.getElementById("saveButton").click();
+            }
+        });
+      });
+
+      document.getElementById("edge-label").addEventListener(
+          "keydown",
+          function(event) {
+            if (event.keyCode == 13) {
+                document.getElementById("edge-saveButton").click();
+            }
+        });
     }
 
   </script>
@@ -344,7 +378,7 @@
         <td>label</td><td><input id="node-label" value="new value"></td>
       </tr>
       <tr>
-        <td>Docker image</td><td><input id="node-dockerImg" value=""></td>
+        <td>Docker image</td><td><input id="node-dockerImage" value=""></td>
       </tr>
       <tr>
         <td>Result path</td><td><input id="node-resultPath" value="/results"></td>
@@ -358,16 +392,33 @@
   <span id="edge-operation">edge</span> <br>
   <table style="margin:auto;">
     <tr>
-      <td>label</td><td><input id="edge-label" value="" /></td>
+      <td>Input path</td><td><input id="edge-label" value="" /></td>
     </tr></table>
   <input type="button" value="save" id="edge-saveButton" />
   <input type="button" value="cancel" id="edge-cancelButton" />
 </div>
 <br>
-<div id="mynetwork"><div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"><canvas width="800" height="600" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;"></canvas><div class="vis-manipulation" style="display: block;"><div class="vis-button vis-add" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><div class="vis-label">Add Node</div></div><div class="vis-separator-line"></div><div class="vis-button vis-connect" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"><div class="vis-label">Add Edge</div></div></div><div class="vis-edit-mode" style="display: block;"></div><div class="vis-close" style="display: block; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"></div></div></div>
+<div id="mynetwork">
+  <div class="vis-network" tabindex="900" style="position: relative; overflow: hidden; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
+    <canvas width="800" height="600" style="position: relative; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); width: 100%; height: 100%;">
+    </canvas>
+    <div class="vis-manipulation" style="display: block;">
+      <div class="vis-button vis-add" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+        <div class="vis-label">Add Node</div>
+      </div>
+      <div class="vis-separator-line"></div>
+      <div class="vis-button vis-connect" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+        <div class="vis-label">Add Edge</div>
+      </div>
+    </div>
+    <div class="vis-edit-mode" style="display: block;"></div>
+    <div class="vis-close" style="display: block; touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);">
+    </div>
+  </div>
+</div>
 <div>
-    <input type="button" id="export_button" onclick="exportNetwork()" value="export">
-    <input type="button" id="destroy_button" onclick="destroyNetwork()" value="destroy">
+  <input type="button" id="export_button" onclick="exportNetwork()" value="export">
+  <input type="button" id="destroy_button" onclick="destroyNetwork()" value="destroy">
 </div>
 <div>
     <textarea id="input_output"></textarea>
